Update aula a entregar.html

--- a/aula a entregar.html
+++ b/aula a entregar.html
@@ -23,13 +23,13 @@
     
   <div class="row">      
      <div class="col-md-4">
-     <img src="../../Users/matheus.pnreis/Downloads/download (1).jpg" class="img-cicle" width="300" height="168" alt=""/>
+     <img src="github.com/matheuspavanelli1/matheuspavanelli1.github.io/blob/master/download%20(1).jpg" class="img-cicle" width="300" height="168" alt=""/>
      <p>Eminem quando começava a carreira</p></div>
      <div class="col-md-4">
-     <img src="../../Users/matheus.pnreis/Downloads/download.jpg" class="img-cicle" width="290" height="174" alt=""/>
+     <img src="github.com/matheuspavanelli1/matheuspavanelli1.github.io/blob/master/download.jpg" class="img-cicle" width="290" height="174" alt=""/>
      <p>Eminem hoje com 40 anos</p></div>
      <div class="col-md-4">
-     <img src="../../Users/matheus.pnreis/Downloads/images.jpg" class="img-cicle" width="292" height="173" alt=""/>
+     <img src="github.com/matheuspavanelli1/matheuspavanelli1.github.io/blob/master/images.jpg" class="img-cicle" width="292" height="173" alt=""/>
      <p>Eminem no seu primeiro album</p></div>
     </div>
        
