--- a/Portifólio/Portifolio Contato.html
+++ b/Portifólio/Portifolio Contato.html
@@ -128,10 +128,10 @@ h1 {
 
   
      <div class="responsive">    
-      <a href="https://www.facebook.com/matheus.pavanelli.77"> <img src="portifolio/face.png" alt="" width="532" height="96"  id="a"/></a>
-      <a href="https://www.instagram.com/matheus.reis.sdf/?hl=pt-br"> <img src="portifolio/INSTA image.png" alt="" width="532" height="96"  id="b"/></a>
-      <img src="portifolio/WHATS image.png" alt="" width="532" height="96"  id="c"/>
-      <img src="portifolio/Email.png" alt="" width="532" height="96"  id="d"/>
+      <a href="https://www.facebook.com/matheus.pavanelli.77"> <img src="face.png" alt="" width="532" height="96"  id="a"/></a>
+      <a href="https://www.instagram.com/matheus.reis.sdf/?hl=pt-br"> <img src="INSTA image.png" alt="" width="532" height="96"  id="b"/></a>
+      <img src="WHATS image.png" alt="" width="532" height="96"  id="c"/>
+      <img src="Email.png" alt="" width="532" height="96"  id="d"/>
       </div>
       
 </body>
