--- a/Portifólio/portifólio.html
+++ b/Portifólio/portifólio.html
@@ -98,7 +98,7 @@ h1 {
 
 <div class="conteiner-fluid">
 <div class="row-fluid">
-<div class="span8 bloco1"> <img src="portifolio/IMG padrao.jpeg"></div>
+<div class="span8 bloco1"> <img src="IMG padrao.jpeg"></div>
 <blockquote class="col-md-offset-3 col-md-7">
   <p class="text-center"><strong>Olá, tudo bem ?</strong></p>
   <p class="text-center"><strong> meu nome é Matheus Pavanelli Navarro dos Reis
