--- a/Portifólio/Portifolio Contato.html
+++ b/Portifólio/Portifolio Contato.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 		<link href="file:///C|/Repositorio/estilo.css" rel="stylesheet" type="text/css">
 		<link href="portifolio/Contatos.css" rel="stylesheet" type="text/css">
+		<link href="Contatos.css" rel="stylesheet" type="text/css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 		<meta charset="utf-8">
